<resources>
    <string name="app_name" translatable="false">Lollipop Budget</string>
    <string name="pref_key_movement_income_color" translatable="false">preference_movement_income_color</string>
    <string name="pref_key_movement_expense_color" translatable="false">preference_movement_expense_color</string>
    <string name="pref_key_currency_code" translatable="false">preference_currency_code</string>
    <string name="pref_key_export_csv" translatable="false">preference_export_csv</string>
    <string name="symbol_file_separator" translatable="false">/</string>
    <string name="symbol_parent_directory" translatable="false">..</string>
    <string name="database_directory_name" translatable="false">databases</string>
    <string name="picture_folder_name" translatable="false">pictures</string>
    <string name="camera_image_extension" translatable="false">.jpeg</string>
    <string name="db_name" translatable="false">LBudget_DB</string>
    <string name="movement_color_red_identifier" translatable="false">red</string>
    <string name="movement_color_green_identifier" translatable="false">green</string>
    <string name="movement_color_blue_identifier" translatable="false">blue</string>
    <string name="amount_placeholder" translatable="false">{MONEYPLACEHOLDER}</string>
    <string name="currency_0" translatable="false">ADP</string>
    <string name="currency_1" translatable="false">AED</string>
    <string name="currency_2" translatable="false">AFA</string>
    <string name="currency_3" translatable="false">AFN</string>
    <string name="currency_4" translatable="false">ALK</string>
    <string name="currency_5" translatable="false">ALL</string>
    <string name="currency_6" translatable="false">ANG</string>
    <string name="currency_7" translatable="false">AOA</string>
    <string name="currency_8" translatable="false">AOK</string>
    <string name="currency_9" translatable="false">AON</string>
    <string name="currency_10" translatable="false">AOR</string>
    <string name="currency_11" translatable="false">ARP</string>
    <string name="currency_12" translatable="false">ARS</string>
    <string name="currency_13" translatable="false">ARY</string>
    <string name="currency_14" translatable="false">ATS</string>
    <string name="currency_15" translatable="false">AUD</string>
    <string name="currency_16" translatable="false">AWG</string>
    <string name="currency_17" translatable="false">AYM</string>
    <string name="currency_18" translatable="false">AZN</string>
    <string name="currency_19" translatable="false">BAD</string>
    <string name="currency_20" translatable="false">BAM</string>
    <string name="currency_21" translatable="false">BBD</string>
    <string name="currency_22" translatable="false">BEC</string>
    <string name="currency_23" translatable="false">BEF</string>
    <string name="currency_24" translatable="false">BGJ</string>
    <string name="currency_25" translatable="false">BGK</string>
    <string name="currency_26" translatable="false">BGL</string>
    <string name="currency_27" translatable="false">BGN</string>
    <string name="currency_28" translatable="false">BHD</string>
    <string name="currency_29" translatable="false">BIF</string>
    <string name="currency_30" translatable="false">BOB</string>
    <string name="currency_31" translatable="false">BOP</string>
    <string name="currency_32" translatable="false">BOV</string>
    <string name="currency_33" translatable="false">BRE</string>
    <string name="currency_34" translatable="false">BRL</string>
    <string name="currency_35" translatable="false">BRN</string>
    <string name="currency_36" translatable="false">BSD</string>
    <string name="currency_37" translatable="false">BTN</string>
    <string name="currency_38" translatable="false">BUK</string>
    <string name="currency_39" translatable="false">BYB</string>
    <string name="currency_40" translatable="false">BYR</string>
    <string name="currency_41" translatable="false">BZD</string>
    <string name="currency_42" translatable="false">CAD</string>
    <string name="currency_43" translatable="false">CHC</string>
    <string name="currency_44" translatable="false">CHE</string>
    <string name="currency_45" translatable="false">CHF</string>
    <string name="currency_46" translatable="false">CHW</string>
    <string name="currency_47" translatable="false">CLP</string>
    <string name="currency_48" translatable="false">CNX</string>
    <string name="currency_49" translatable="false">COU</string>
    <string name="currency_50" translatable="false">CSD</string>
    <string name="currency_51" translatable="false">CSK</string>
    <string name="currency_52" translatable="false">CUP</string>
    <string name="currency_53" translatable="false">DDM</string>
    <string name="currency_54" translatable="false">DKK</string>
    <string name="currency_55" translatable="false">DOP</string>
    <string name="currency_56" translatable="false">DZD</string>
    <string name="currency_57" translatable="false">ERN</string>
    <string name="currency_58" translatable="false">ESA</string>
    <string name="currency_59" translatable="false">ESB</string>
    <string name="currency_60" translatable="false">ESP</string>
    <string name="currency_61" translatable="false">ETB</string>
    <string name="currency_62" translatable="false">EUR</string>
    <string name="currency_63" translatable="false">FIM</string>
    <string name="currency_64" translatable="false">FJD</string>
    <string name="currency_65" translatable="false">FKP</string>
    <string name="currency_66" translatable="false">FRF</string>
    <string name="currency_67" translatable="false">GBP</string>
    <string name="currency_68" translatable="false">GEL</string>
    <string name="currency_69" translatable="false">GHS</string>
    <string name="currency_70" translatable="false">GIP</string>
    <string name="currency_71" translatable="false">GMD</string>
    <string name="currency_72" translatable="false">GNE</string>
    <string name="currency_73" translatable="false">GQE</string>
    <string name="currency_74" translatable="false">GWP</string>
    <string name="currency_75" translatable="false">HKD</string>
    <string name="currency_76" translatable="false">HUF</string>
    <string name="currency_77" translatable="false">IDR</string>
    <string name="currency_78" translatable="false">IEP</string>
    <string name="currency_79" translatable="false">ILP</string>
    <string name="currency_80" translatable="false">ILS</string>
    <string name="currency_81" translatable="false">INR</string>
    <string name="currency_82" translatable="false">IQD</string>
    <string name="currency_83" translatable="false">ISJ</string>
    <string name="currency_84" translatable="false">ITL</string>
    <string name="currency_85" translatable="false">JMD</string>
    <string name="currency_86" translatable="false">JOD</string>
    <string name="currency_87" translatable="false">JPY</string>
    <string name="currency_88" translatable="false">KGS</string>
    <string name="currency_89" translatable="false">KYD</string>
    <string name="currency_90" translatable="false">LAJ</string>
    <string name="currency_91" translatable="false">LAK</string>
    <string name="currency_92" translatable="false">LKR</string>
    <string name="currency_93" translatable="false">LRD</string>
    <string name="currency_94" translatable="false">LSL</string>
    <string name="currency_95" translatable="false">LSM</string>
    <string name="currency_96" translatable="false">LTT</string>
    <string name="currency_97" translatable="false">LUL</string>
    <string name="currency_98" translatable="false">LVL</string>
    <string name="currency_99" translatable="false">MAD</string>
    <string name="currency_100" translatable="false">MAF</string>
    <string name="currency_101" translatable="false">MDL</string>
    <string name="currency_102" translatable="false">MGA</string>
    <string name="currency_103" translatable="false">MKD</string>
    <string name="currency_104" translatable="false">MLF</string>
    <string name="currency_105" translatable="false">MMK</string>
    <string name="currency_106" translatable="false">MOP</string>
    <string name="currency_107" translatable="false">MRO</string>
    <string name="currency_108" translatable="false">MTL</string>
    <string name="currency_109" translatable="false">MTP</string>
    <string name="currency_110" translatable="false">MUR</string>
    <string name="currency_111" translatable="false">MVQ</string>
    <string name="currency_112" translatable="false">MXP</string>
    <string name="currency_113" translatable="false">MXV</string>
    <string name="currency_114" translatable="false">MYR</string>
    <string name="currency_115" translatable="false">MZE</string>
    <string name="currency_116" translatable="false">MZM</string>
    <string name="currency_117" translatable="false">NGN</string>
    <string name="currency_118" translatable="false">NIC</string>
    <string name="currency_119" translatable="false">NIO</string>
    <string name="currency_120" translatable="false">NOK</string>
    <string name="currency_121" translatable="false">NZD</string>
    <string name="currency_122" translatable="false">OMR</string>
    <string name="currency_123" translatable="false">PAB</string>
    <string name="currency_124" translatable="false">PGK</string>
    <string name="currency_125" translatable="false">PHP</string>
    <string name="currency_126" translatable="false">PKR</string>
    <string name="currency_127" translatable="false">PLN</string>
    <string name="currency_128" translatable="false">PLZ</string>
    <string name="currency_129" translatable="false">PTE</string>
    <string name="currency_130" translatable="false">PYG</string>
    <string name="currency_131" translatable="false">QAR</string>
    <string name="currency_132" translatable="false">RHD</string>
    <string name="currency_133" translatable="false">ROK</string>
    <string name="currency_134" translatable="false">ROL</string>
    <string name="currency_135" translatable="false">RON</string>
    <string name="currency_136" translatable="false">RSD</string>
    <string name="currency_137" translatable="false">RUB</string>
    <string name="currency_138" translatable="false">RUR</string>
    <string name="currency_139" translatable="false">RWF</string>
    <string name="currency_140" translatable="false">SAR</string>
    <string name="currency_141" translatable="false">SBD</string>
    <string name="currency_142" translatable="false">SCR</string>
    <string name="currency_143" translatable="false">SDD</string>
    <string name="currency_144" translatable="false">SDP</string>
    <string name="currency_145" translatable="false">SGD</string>
    <string name="currency_146" translatable="false">SHP</string>
    <string name="currency_147" translatable="false">SIT</string>
    <string name="currency_148" translatable="false">SKK</string>
    <string name="currency_149" translatable="false">SLL</string>
    <string name="currency_150" translatable="false">SOS</string>
    <string name="currency_151" translatable="false">SRD</string>
    <string name="currency_152" translatable="false">SRG</string>
    <string name="currency_153" translatable="false">SSP</string>
    <string name="currency_154" translatable="false">STD</string>
    <string name="currency_155" translatable="false">SUR</string>
    <string name="currency_156" translatable="false">SVC</string>
    <string name="currency_157" translatable="false">SYP</string>
    <string name="currency_158" translatable="false">SZL</string>
    <string name="currency_172" translatable="false">USD</string>
    <string name="pref_title_movement_income_color">Income color</string>
    <string name="pref_title_movement_expense_color">Expense color</string>
    <string name="pref_title_currency_code">Currency</string>
</resources>