<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of LBudget.
  ~ LBudget is free software: you can redistribute it and/or modify
  ~ it under the terms of version 3 of the GNU General Public License as published by
  ~ the Free Software Foundation
  ~ LBudget is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with LBudget. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/currency_codes"
        android:entryValues="@array/currency_codes"
        android:defaultValue="@string/currency_172"
        android:key="@string/pref_key_currency_code"
        android:title="@string/pref_title_currency_code" />
    <ListPreference
        android:entries="@array/movement_color_entries"
        android:entryValues="@array/movement_color_identifiers"
        android:defaultValue="@string/movement_color_green_identifier"
        android:key="@string/pref_key_movement_income_color"
        android:title="@string/pref_title_movement_income_color" />
    <ListPreference
        android:entries="@array/movement_color_entries"
        android:entryValues="@array/movement_color_identifiers"
        android:defaultValue="@string/movement_color_red_identifier"
        android:key="@string/pref_key_movement_expense_color"
        android:title="@string/pref_title_movement_expense_color" />
</PreferenceScreen>